sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_departspeed/errors.duarouter
Error: Invalid departSpeed definition for vehicle '1'
Quitting (on error).
